<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/split_image"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@drawable/frame_split_horizontal" />

    <TextView
        android:id="@+id/txt_info"
        android:layout_marginLeft="5dp"
        style="@style/paging_bar_text_result"
        android:text="@string/paging_bar_info" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="6dp"
         >

        <TextView
            android:id="@+id/txt_first_page"
            style="@style/paging_bar_text"
            android:text="@string/paging_bar_fisrt_page" />

        <TextView
            android:id="@+id/txt_pre_page"
            style="@style/paging_bar_text"
            android:layout_marginLeft="10dip"
            android:text="@string/paging_bar_pre_page" />

        <TextView
            android:id="@+id/txt_next_page"
            style="@style/paging_bar_text"
            android:layout_marginLeft="10dip"
            android:text="@string/paging_bar_next_page" />

        <TextView
            android:id="@+id/txt_end_page"
            style="@style/paging_bar_text"
            android:layout_marginLeft="10dip"
            android:text="@string/paging_bar_end_page" />
    </LinearLayout>

</LinearLayout>